[package]
name = "rng"
version = "0.1.0"
authors = ["Nathan Bradshaw <nathansbradshaw@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router",] }
getrandom = { version = "0.3.1", features = ["wasm_js"], optional = true}
rand =  {version = "0.9.0", optional = true}

[lib]
name = "rng"
path = "src/lib.rs"

[features]
default = ["web"]
web = ["dioxus/web", "dep:getrandom", "dep:rand"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# getrandom = { version = "0.3.1", features = ["wasm_js"] }


